Allow index creation via API.